RESOLVED FIXED 59097
[Qt] Fix the style issue for Api/qwebkitplatformplugin.h
https://bugs.webkit.org/show_bug.cgi?id=59097
Summary [Qt] Fix the style issue for Api/qwebkitplatformplugin.h
Yi Shen
Reported 2011-04-21 06:27:48 PDT
Fix the style issue for Api/qwebkitplatformplugin.h found by the webkit-check-style
Attachments
first try (2.70 KB, patch)
2011-04-21 06:30 PDT, Yi Shen
no flags
Yi Shen
Comment 1 2011-04-21 06:30:37 PDT
Created attachment 90523 [details] first try
Yi Shen
Comment 2 2011-04-21 07:16:38 PDT
Thanks Antonio!
WebKit Commit Bot
Comment 3 2011-04-21 08:19:38 PDT
The commit-queue encountered the following flaky tests while processing attachment 90523 [details]: http/tests/misc/favicon-loads-with-icon-loading-override.html bug 58412 (author: alice.liu@apple.com) http/tests/xmlhttprequest/cross-origin-no-authorization.html bug 33357 (author: ap@webkit.org) http/tests/canvas/webgl/origin-clean-conformance.html bug 52117 (author: enne@google.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4 2011-04-21 08:22:08 PDT
Comment on attachment 90523 [details] first try Clearing flags on attachment: 90523 Committed r84501: <http://trac.webkit.org/changeset/84501>
WebKit Commit Bot
Comment 5 2011-04-21 08:22:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.