2011-04-21  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Antonio Gomes.

        [Qt] Fix the style issue for Api/qwebkitplatformplugin.h
        https://bugs.webkit.org/show_bug.cgi?id=59097

        Fix the style issues for Api/qwebkitplatformplugin.h found by the webkit-check-style.

        * Api/qwebkitplatformplugin.h:

Canonical link: https://commits.webkit.org/74240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84501 268f45cc-cd09-0410-ab3c-d52691b4dbfc